# en-croissant

./: .editorconfig  .eslintrc.json  .gitignore  .oxfmtrc.json  .oxlintrc.json  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  README.md  TTS-GUIDE-de.md  TTS-GUIDE-es.md  TTS-GUIDE-fr.md  TTS-GUIDE-ja.md  TTS-GUIDE-ru.md  TTS-GUIDE-zh.md  TTS-GUIDE.md  TTS_README.md  biome.json  i18next.config.ts  index.html  jest.config.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yml  improvement.yml
.github/workflows/: prerelease.yml  release.yml  test.yml
documents/: README_ar_SA.md  README_be_BY.md  README_de_DE.md  README_es_ES.md  README_fa_IR.md  README_fr_FR.md  README_it_IT.md  README_ko_KR.md  README_nb_NO.md  README_pl_PL.md  README_pt_PT.md  README_ru_RU.md  README_tr_TR.md  README_uk_UA.md  README_zh_CN.md  README_zh_TW.md
public/: fonts.css
public/pieces/: alpha.css  anarcandy.css  california.css  cardinal.css  cburnett.css  chess7.css  chessnut.css  companion.css  disguised.css  dubrovny.css  fantasy.css  fresca.css  game_room.css  gioco.css  governor.css  horsey.css  icpieces.css  kosal.css  leipzig.css  letter.css  libra.css  maestro.css  merida.css  neo.css  neo_wood.css  pirouetti.css  pixel.css  reillycraig.css  riohacha.css  shapes.css  spatial.css  staunty.css  tatiana.css  view-pawn-structure.css  wood.css
public/pieces-3d/: Basic.css  CubesAndPi.css  Experimental.css  Glass.css  Metal.css  ModernJade.css  ModernWood.css  RedVBlue.css  Staunton.css  Trimmed.css  Wood.css
scripts/: prepare-aix-extension.mjs  with-cargo-path.mjs
src/: App.tsx  bindings.ts  decs.d.ts  index.d.ts  index.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/data/: README.md  a.tsv  b.tsv  c.tsv  d.tsv  e.tsv  frc.tsv
src-tauri/icons/: icon.icns
src-tauri/src/: chess.rs  db.rs  enc_local_db.rs  engine_games.rs  error.rs  fide.rs  fs.rs  game.rs  lexer.rs  main.rs  oauth.rs  onnx.rs  opening.rs  pgn.rs  progress.rs  puzzle.rs  sound.rs
src-tauri/src/db/: core.rs  create.sql  date_norm.rs  delete_indexes.sql  encoding.rs  indexes.sql  init-database.sql  mod.rs  models.rs  ocgdb.rs  ops.rs  pgn.rs  schema.rs  search.rs  search_index.rs  twic.rs
src-tauri/src/engine/: mod.rs  process.rs  types.rs  uci.rs
src-tauri/src/tauri-plugin-oauth/: Cargo.toml  LICENSE
src-tauri/src/tauri-plugin-oauth/src/: lib.rs
src-tauri/src/tournament/: game.rs  mod.rs
src/atoms/: atoms.ts  keybinds.ts  tabs.ts  utils.ts
src/bindings/: generated.ts  index.ts
src/chessground/: Chessground.tsx
src/components/: About.tsx  AnnotationEditor.tsx  AnnotationPanel.tsx  BestMoves.tsx  BoardAnalysis.tsx  BoardTab.tsx  BoardTabs.tsx  BoardView.tsx  ChessSidePicker.tsx  Chessboard.tsx  Chessground.tsx  ConvertButton.tsx  DatabasesTable.tsx  DepthSlider.tsx  EngineSettingsBoard.tsx  EngineTable.tsx  ErrorComponent.tsx  FenInput.tsx  GameInfo.tsx  GameNotation.tsx  GameTable.tsx  ImageCheckbox.tsx  LinesSlider.tsx  LoadingButton.tsx  OpenFolderButton.tsx  OpeningName.tsx  ParseButton.tsx  PgnInput.tsx  PlayerCard.tsx  PlayerTable.tsx  ProgressButton.tsx  SearchInput.tsx  SettingsController.tsx  Sidebar.css.ts  Sidebar.module.css  Sidebar.tsx  SpeedBadge.tsx  TopBar.css.ts  TopBar.module.css  TopBar.tsx
src/components/boards/: AnnotationHint.tsx  Board.css.ts  Board.tsx  BoardAnalysis.tsx  BoardBar.tsx  BoardControls.tsx  BoardGame.tsx  BoardPlay.tsx  Clock.css.ts  Clock.module.css  Clock.tsx  CompleteMoveCell.tsx  EditingCard.css.ts  EditingCard.module.css  EditingCard.tsx  EnginesSelect.tsx  EvalBar.tsx  EvalListener.tsx  GameNotation.css.ts  GameNotation.tsx  MoveCell.css.ts  MoveCell.tsx  MoveInput.tsx  OpeningName.tsx  OpponentForm.tsx  PiecesGrid.tsx  PromotionModal.tsx  ReviewHint.tsx  board.css
src/components/common/: AccountCards.tsx  ChallengeHistory.tsx  Comment.tsx  CompleteMoveCell.tsx  ConfirmModal.tsx  DetachedEval.tsx  EngineLogsView.tsx  EvalChart.css.ts  EvalChart.module.css  EvalChart.tsx  FileInput.tsx  GameContext.ts  GameInfo.css.ts  GameInfo.module.css  GameInfo.tsx  GameNotation.css.ts  GameNotation.module.css  GameNotation.tsx  GenericCard.css.ts  GenericCard.module.css  GenericCard.tsx  GoModeInput.tsx  InlineInput.tsx  LocalImage.tsx  MoveCell.css.ts  MoveCell.module.css  MoveCell.tsx  MoveControls.tsx  OpenFolderButton.tsx  Piece.tsx  (+12 more)
src/hooks/: useGameTimer.ts  useProgress.ts
src/layouts/: BoardLayout.tsx
src/pages/: _app.tsx  _document.tsx  account.tsx  databases.tsx  engines.tsx  files.tsx  home.tsx  index.tsx  settings.tsx
src/routes/: __root.tsx  accounts.tsx  boards.tsx  databases.tsx  engines.tsx  files.tsx  index.tsx  settings.tsx
src/state/: atoms.ts  keybinds.ts  store.ts  utils.ts
src/styles/: Chessboard.css.ts  Chessboard.module.css  chesgroundBaseOverride.css  chessgroundBaseOverride.css  chessgroundColorsOverride.css  chessgroundPiecesOverride.css  global.css  global.css.ts  react-mosaic.css  staunty.css  theme.ts
src/translation/: ar_SA.ts  be-BY.json  be_BY.json  be_BY.ts  de-DE.json  de_DE.json  de_DE.ts  en-GB.json  en-US.json  en_GB.json  en_GB.ts  en_US.json  en_US.ts  es-ES.json  es_ES.json  es_ES.ts  fa_IR.ts  fr-FR.json  fr_FR.json  fr_FR.ts  it-IT.json  it_IT.json  it_IT.ts  ko-KR.json  ko_KR.json  ko_KR.ts  nb-NO.json  nb_NO.json  nb_NO.ts  pl-PL.json  pl_PL.json  pl_PL.ts  pt-PT.json  pt_PT.json  pt_PT.ts  ru-RU.json  ru_RU.json  ru_RU.ts  tr-TR.json  tr_TR.json  (+10 more)
src/utils/: analysis.ts  annotation.ts  board.ts  chess.test.ts  chess.ts  chesscom.ts  chesscom.tsx  chessdb.ts  chessops.ts  clock.ts  db.ts  directories.ts  engines.ts  files.ts  format.ts  helperFunctions.ts  hooks.ts  http.ts  invoke.tsx  lichess.ts  lichess.tsx  misc.ts  misc.tsx  phase.ts  puzzles.ts  repertoire.ts  score.test.ts  score.ts  session.ts  sound.ts  tabs.ts  tcn.ts  timeControl.ts  transpositions.ts  treeReducer.ts  tts.ts  unwrap.tsx
(+203 files in other folders)
