[package]
name = "en-croissant"
version = "0.7.1"
description = "A Modern Chess Database"
authors = ["Francisco Salgueiro <fgcdbs@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/franciscoBSalgueiro/en-croissant"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "cli", "api-all", "updater"] }
zip = "0.6.2"
tokio = { version = "1.33", features = ["full"] }
futures-util = "0.3.24"
reqwest = { version = "0.11.6", features = ["stream", "blocking", "json"] }
shakmaty = "0.26.0"
pgn-reader = "0.25.0"
csv = "1.1.6"
lazy_static = "1.4.0"
btoi = "0.4.2"
rusqlite = { version = "0.28.0", features = ["bundled"] }
bzip2 = "0.4.3"
zstd = "0.13"
diesel = { version = "2.0.2", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
] }
rayon = "1.6.1"
chrono = "0.4.23"
derivative = "2.2.0"
dashmap = "5.4.0"
once_cell = "1.17.1"
rand = "0.8.5"
vampirc-uci = "0.11.1"
tempfile = "3.6.0"
quick-xml = { version = "0.30.0", features = ["serialize"] }
specta = { version = "2.0.0-rc.5", features = ["typescript"] }
tauri-specta = { version = "2.0.0-rc.2", features = ["typescript"] }
strsim = "0.10.0"
bincode = "2.0.0-rc.3"
thiserror = "1.0.48"
log = "0.4.20"
oauth2 = "4.4.2"
axum = "0.6.20"
tar = "0.4.40"
sysinfo = "0.29.10"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
specta = { git = "https://github.com/oscartbeaumont/specta", rev = "034a9c028639881878455f21c5d8667bbe53c42b" }
