[package]
name = "tauri-plugin-oauth"
version = "0.0.0"
authors = ["FabianLars <fabianlars@fabianlars.de>"]
description = "A Tauri plugin for spawning a localhost server. Needed for some oauth flows (Login with X)."
edition = "2021"
rust-version = "1.57"
exclude = ["/examples"]

[dependencies]
httparse = "1"
log = "0.4"
url = "2"
tauri = { version = "1" }
serde = "1"